# caregap

./: .gitignore  CONTENT_EXPANSION_REPORT.md  README.md
api/: app.yaml  pyproject.toml  requirements.txt
api/app/: cms.py  legal.py  letter.py  main.py  models.py  ocr.py  pipeline.py
api/app/cache/: bill_01.json  bill_02.json  bill_03.json  manifest.json
api/tests/: test_ocr.py
data/: caregap_master_pricing.csv  caregap_pricing_merged.csv  cms_pfs.csv  cms_pricing_lookup.json  legal_kb.md
scripts/: prewarm.py  run_local.sh
web/: package-lock.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/contact/: page.tsx
web/app/faq/: page.tsx
web/app/learn/: page.tsx
web/app/learn/charity-care-hospitals-legally-have-to-offer-it/: page.tsx
web/app/learn/how-to-read-your-hospital-bill/: page.tsx
web/app/press/: page.tsx
web/app/privacy/: page.tsx
web/app/terms/: page.tsx
web/components/: analyzing.tsx  faq.tsx  footer.tsx  legal-protections.tsx  letter-view.tsx  nav.tsx  results-view.tsx  roadmap-view.tsx  sample-analysis.tsx  stats-band.tsx  trust-section.tsx  upload-card.tsx  who-is-for.tsx
web/hooks/: use-in-view.ts
web/lib/: api.ts
