[project]
name = "caregap-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "httpx>=0.27",
    "pandas>=2.2",
    "pypdf>=4.0",
    "Pillow>=10.0",
    "google-genai>=1.0",
    "anthropic>=0.40",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
tavily = ["tavily-python>=0.5"]
